refactored c# frontend to enum token type